fix: Resolve resume button functionality on smaller devices

--- a/src/components/Home/styles.scss
+++ b/src/components/Home/styles.scss
@@ -112,6 +112,7 @@
             margin: 0;
             width: 100%;
             height: auto;
+            z-index: 9;
         }
     }
 }
